start and kill working correctly, correct PID found